translated preop staff

--- a/es/hub/transplant/preop/staff/coordinator.html
+++ b/es/hub/transplant/preop/staff/coordinator.html
@@ -5,7 +5,7 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
   <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);} gtag('js',new Date()); gtag('config','G-JHT0DBJBHH',{transport_type:'beacon'});</script>
   <meta charset="utf-8" /><meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Pre-Op Staff: Transplant Coordinator</title>
+  <title>Personal Preoperatorio: Coordinador de Trasplante</title>
   <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/assets/css/main.css">
@@ -18,48 +18,48 @@
     <div data-include="/includes_es/transplant-preop-subnav.html"></div>
     <div data-include="/includes_es/transplant-preop-staff-subnav.html"></div>
 
-    <h1>Transplant Coordinator</h1>
+    <h1>Coordinador de Trasplante</h1>
 
-<h2>Short Description</h2>
+<h2>Descripción breve</h2>
 <p>
-  The transplant coordinator is your main point of contact before surgery. They
-  organize testing and visits, give clear instructions, track what’s still
-  pending, and keep the whole team in sync.
+  El coordinador de trasplante es tu principal punto de contacto antes de la cirugía.
+  Organiza pruebas y consultas, da instrucciones claras, lleva el control de lo pendiente
+  y mantiene a todo el equipo en sincronía.
 </p>
 
-<h2>Main Priorities</h2>
+<h2>Prioridades principales</h2>
 <ul>
-  <li>Schedule and bundle labs, imaging, and specialist consults.</li>
-  <li>Provide pre-op instructions (fasting, arrival time, which meds to take or hold).</li>
-  <li>Track results and clearance items; flag anything delaying surgery.</li>
-  <li>Coordinate communication between you, your caregiver, and the clinical team.</li>
-  <li>Prepare you for the admission call and day-of check-in steps.</li>
+  <li>Programar y agrupar análisis, estudios de imagen y consultas con especialistas.</li>
+  <li>Dar instrucciones preoperatorias (ayuno, hora de llegada, qué medicinas tomar o suspender).</li>
+  <li>Revisar resultados y requisitos de autorización; señalar cualquier cosa que retrase la cirugía.</li>
+  <li>Coordinar la comunicación entre tú, tu cuidador y el equipo clínico.</li>
+  <li>Prepararte para la llamada de admisión y los pasos del día de ingreso.</li>
 </ul>
 
-<h2>Issues They Work With</h2>
+<h2>Problemas con los que trabajan</h2>
 <ul>
-  <li>Missed or expiring tests; arranging quick rechecks.</li>
-  <li>Confusing instructions (NPO/meds) — clarifies and reprints summaries.</li>
-  <li>Records transfer between your local doctors and the transplant center.</li>
-  <li>Logistics: transportation, lodging info, caregiver planning.</li>
-  <li>New symptoms before surgery — triages to the nurse/provider promptly.</li>
+  <li>Pruebas faltantes o por caducar; organizar reanálisis rápidos.</li>
+  <li>Instrucciones confusas (ayuno/medicinas) — las aclara y entrega resúmenes impresos.</li>
+  <li>Transferencia de expedientes entre tus médicos locales y el centro de trasplante.</li>
+  <li>Logística: transporte, alojamiento, planificación del cuidador.</li>
+  <li>Nuevos síntomas antes de la cirugía — los deriva rápidamente a la enfermera/proveedor.</li>
 </ul>
 
-<h2>When to Go to Them</h2>
+<h2>Cuándo acudir a ellos</h2>
 <ul>
-  <li>To see what’s still pending for clearance and what happens next.</li>
-  <li>When you need to reschedule, bundle appointments, or update contact info.</li>
-  <li>If you’re unsure about day-of instructions or medication timing.</li>
-  <li>When something changes (ER visit, infection, new diagnosis) and you need guidance on next steps.</li>
+  <li>Para saber qué está pendiente de autorización y qué sigue en el proceso.</li>
+  <li>Cuando necesites reprogramar, agrupar citas o actualizar tus datos de contacto.</li>
+  <li>Si tienes dudas sobre las instrucciones del día de la cirugía o el horario de los medicamentos.</li>
+  <li>Cuando algo cambia (visita a urgencias, infección, nuevo diagnóstico) y necesitas orientación sobre los próximos pasos.</li>
 </ul>
 
-<h2>What They Don’t Handle (Boundaries)</h2>
+<h2>Lo que no manejan (límites)</h2>
 <ul>
-  <li>Final medical decisions or prescriptions — handled by the nephrologist/surgeon.</li>
-  <li>Insurance approvals and detailed cost estimates — financial coordinator.</li>
-  <li>Ongoing counseling or complex social needs — social worker.</li>
-  <li>Medication side-effect management and interactions — pharmacist/medical team.</li>
-  <li>Emergencies — call the clinic’s on-call line or 911.</li>
+  <li>Decisiones médicas finales o recetas — las toman el nefrólogo/cirujano.</li>
+  <li>Aprobaciones de seguros y cálculos de costos — coordinador financiero.</li>
+  <li>Consejería continua o necesidades sociales complejas — trabajador social.</li>
+  <li>Manejo de efectos secundarios e interacciones — farmacéutico/equipo médico.</li>
+  <li>Emergencias — llama a la línea de guardia de la clínica o al 911.</li>
 </ul>
 
   </main>
@@ -67,3 +67,4 @@
   <script src="/scripts/analytics.js" defer></script>
 </body>
 </html>
+
