--- a/es/hub/transplant/preop/staff/financial-coordinator.html
+++ b/es/hub/transplant/preop/staff/financial-coordinator.html
@@ -5,7 +5,7 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
   <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);} gtag('js',new Date()); gtag('config','G-JHT0DBJBHH',{transport_type:'beacon'});</script>
   <meta charset="utf-8" /><meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Pre-Op Staff: Financial Coordinator</title>
+  <title>Personal Preoperatorio: Coordinador Financiero</title>
   <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/assets/css/main.css">
@@ -18,45 +18,45 @@
     <div data-include="/includes_es/transplant-preop-subnav.html"></div>
     <div data-include="/includes_es/transplant-preop-staff-subnav.html"></div>
 
-<h1>Financial Coordinator</h1>
+<h1>Coordinador Financiero</h1>
 
-<h2>Short Description</h2>
+<h2>Descripción breve</h2>
 <p>
-  The financial coordinator confirms coverage for your transplant, secures prior authorizations,
-  explains costs in plain language, and helps you avoid surprise bills.
+  El coordinador financiero confirma la cobertura de tu trasplante, gestiona autorizaciones previas,
+  explica los costos en un lenguaje sencillo y te ayuda a evitar facturas sorpresa.
 </p>
 
-<h2>Main Priorities</h2>
+<h2>Prioridades principales</h2>
 <ul>
-  <li>Verify insurance eligibility and benefits for evaluation, surgery, and follow-up.</li>
-  <li>Submit and track prior authorizations (hospital, surgeon, anesthesia, imaging, labs).</li>
-  <li>Check coverage for anti-rejection and related medicines (specialty pharmacy if needed).</li>
-  <li>Provide estimates of out-of-pocket costs and payment options.</li>
-  <li>Connect you with assistance programs if you qualify.</li>
+  <li>Verificar elegibilidad de seguro y beneficios para la evaluación, cirugía y seguimiento.</li>
+  <li>Presentar y dar seguimiento a autorizaciones previas (hospital, cirujano, anestesia, imágenes, análisis).</li>
+  <li>Comprobar la cobertura de medicamentos inmunosupresores y relacionados (farmacia especializada si es necesario).</li>
+  <li>Proporcionar estimados de costos de bolsillo y opciones de pago.</li>
+  <li>Conectarte con programas de asistencia si calificas.</li>
 </ul>
 
-<h2>Issues They Work With</h2>
+<h2>Problemas con los que trabajan</h2>
 <ul>
-  <li>Plan changes, COBRA, secondary insurance, or coordination of benefits.</li>
-  <li>Network status of facilities and providers; referrals if required.</li>
-  <li>Medication costs, step therapy, and pharmacy routing problems.</li>
-  <li>Billing questions and who to contact for statements or itemized bills.</li>
+  <li>Cambios de plan, COBRA, seguros secundarios o coordinación de beneficios.</li>
+  <li>Estado de red de centros y proveedores; derivaciones si se requieren.</li>
+  <li>Costos de medicamentos, terapia escalonada y problemas de envío en farmacia.</li>
+  <li>Preguntas de facturación y a quién contactar para estados de cuenta o facturas detalladas.</li>
 </ul>
 
-<h2>When to Go to Them</h2>
+<h2>Cuándo acudir a ellos</h2>
 <ul>
-  <li>Early in the evaluation and any time your insurance or employment changes.</li>
-  <li>If you receive a denial, high copay quote, or confusing bill.</li>
-  <li>Before switching pharmacies or plans, so medicines stay covered without gaps.</li>
-  <li>When planning travel/lodging for surgery and follow-up visits.</li>
+  <li>Al inicio de la evaluación y siempre que cambie tu seguro o empleo.</li>
+  <li>Si recibes una negación, una cotización de copago alto o una factura confusa.</li>
+  <li>Antes de cambiar de farmacia o de plan, para que los medicamentos sigan cubiertos sin interrupciones.</li>
+  <li>Al planear viajes/alojamiento para la cirugía y las visitas de seguimiento.</li>
 </ul>
 
-<h2>What They Don’t Handle (Boundaries)</h2>
+<h2>Lo que no manejan (límites)</h2>
 <ul>
-  <li>Medical decisions or prescriptions — handled by the clinical team.</li>
-  <li>Scheduling tests and day-of instructions — transplant coordinator.</li>
-  <li>Counseling and caregiver support — social worker.</li>
-  <li>Emergency financial crises — they can connect you to resources, but not make medical changes.</li>
+  <li>No toman decisiones médicas ni recetan — eso corresponde al equipo clínico.</li>
+  <li>No programan pruebas ni dan instrucciones del día de la cirugía — coordinador de trasplante.</li>
+  <li>No brindan consejería ni apoyo al cuidador — trabajador social.</li>
+  <li>No resuelven crisis financieras de emergencia — pueden conectarte con recursos, pero no hacer cambios médicos.</li>
 </ul>
 
   </main>
@@ -64,3 +64,4 @@
   <script src="/scripts/analytics.js" defer></script>
 </body>
 </html>
+
