--- a/es/hub/transplant/preop/staff/index.html
+++ b/es/hub/transplant/preop/staff/index.html
@@ -12,7 +12,7 @@
   </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Transplant Staff - Kidney Transplant Hub</title>
+  <title>Personal Preoperatorio - Centro de Trasplante Renal</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
@@ -24,38 +24,38 @@
   <div data-include="/includes_es/header.html"></div>
   <main class="content" id="main">
     <div data-include="/includes_es/transplant-subnav.html"></div>
-<div data-include="/includes_es/transplant-preop-subnav.html"></div>
-<div data-include="/includes_es/transplant-preop-staff-subnav.html"></div>
+    <div data-include="/includes_es/transplant-preop-subnav.html"></div>
+    <div data-include="/includes_es/transplant-preop-staff-subnav.html"></div>
 
-<h1>Pre-Op Staff</h1>
-<p>This team clears you for surgery, coordinates tests, and prepares you for a safe recovery.</p>
+<h1>Personal Preoperatorio</h1>
+<p>Este equipo te autoriza para la cirugía, coordina pruebas y te prepara para una recuperación segura.</p>
 
 <section class="testimonial-summary">
-  <h2><a href="/es/hub/transplant/preop/staff/coordinator.html" data-evt="preop-staff:coordinator">Transplant Coordinator</a></h2>
-  <p>Your main contact for scheduling, instructions, and getting questions to the right person.</p>
+  <h2><a href="/es/hub/transplant/preop/staff/coordinator.html" data-evt="preop-staff:coordinator">Coordinador de Trasplante</a></h2>
+  <p>Tu contacto principal para programación, instrucciones y canalizar preguntas a la persona adecuada.</p>
 </section>
 
 <section class="testimonial-summary">
-  <h2><a href="/es/hub/transplant/preop/staff/nephrologist.html" data-evt="preop-staff:nephrologist">Transplant Nephrologist</a></h2>
-  <p>Reviews test results, tunes your plan, and clears you for surgery with the team.</p>
+  <h2><a href="/es/hub/transplant/preop/staff/nephrologist.html" data-evt="preop-staff:nephrologist">Nefrólogo de Trasplante</a></h2>
+  <p>Revisa resultados de pruebas, ajusta tu plan y junto al equipo te autoriza para la cirugía.</p>
 </section>
 
 <section class="testimonial-summary">
-  <h2><a href="/es/hub/transplant/preop/staff/surgeon.html" data-evt="preop-staff:surgeon">Transplant Surgeon (Consult)</a></h2>
-  <p>Explains the operation, incision, stent/drain plans, and answers technical questions.</p>
+  <h2><a href="/es/hub/transplant/preop/staff/surgeon.html" data-evt="preop-staff:surgeon">Cirujano de Trasplante (Consulta)</a></h2>
+  <p>Explica la operación, la incisión, planes de stents/drenajes y responde preguntas técnicas.</p>
 </section>
 
 <section class="testimonial-summary">
-  <h2><a href="/es/hub/transplant/preop/staff/social-worker.html" data-evt="preop-staff:social-worker">Social Worker</a></h2>
-  <p>Coping, caregiver planning, work/benefits, and resource referrals.</p>
+  <h2><a href="/es/hub/transplant/preop/staff/social-worker.html" data-evt="preop-staff:social-worker">Trabajador Social</a></h2>
+  <p>Apoyo emocional, planificación de cuidadores, trámites laborales/beneficios y referencias a recursos.</p>
 </section>
 
 <section class="testimonial-summary">
-  <h2><a href="/es/hub/transplant/preop/staff/financial-coordinator.html" data-evt="preop-staff:financial">Financial Coordinator</a></h2>
-  <p>Insurance, authorizations, out-of-pocket estimates, and medication coverage help.</p>
+  <h2><a href="/es/hub/transplant/preop/staff/financial-coordinator.html" data-evt="preop-staff:financial">Coordinador Financiero</a></h2>
+  <p>Seguro, autorizaciones, estimaciones de gastos personales y ayuda con cobertura de medicamentos.</p>
 </section>
 
-<p class="disclaimer">Informational only; roles vary by center.</p>
+<p class="disclaimer">Solo con fines informativos; los roles varían según el centro.</p>
 
   </main>
   <div data-include="/includes_es/footer.html"></div>
