--- a/es/hub/transplant/preop/staff/nephrologist.html
+++ b/es/hub/transplant/preop/staff/nephrologist.html
@@ -5,7 +5,7 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
   <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);} gtag('js',new Date()); gtag('config','G-JHT0DBJBHH',{transport_type:'beacon'});</script>
   <meta charset="utf-8" /><meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Pre-Op Staff: Transplant Nephrologist</title>
+  <title>Personal Preoperatorio: Nefrólogo de Trasplante</title>
   <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/assets/css/main.css">
@@ -18,48 +18,48 @@
     <div data-include="/includes_es/transplant-preop-subnav.html"></div>
     <div data-include="/includes_es/transplant-preop-staff-subnav.html"></div>
 
-<h1>Transplant Nephrologist</h1>
+<h1>Nefrólogo de Trasplante</h1>
 
-<h2>Short Description</h2>
+<h2>Descripción breve</h2>
 <p>
-  A transplant nephrologist is the kidney specialist who leads your medical work-up before surgery. 
-  They review tests, confirm that transplant is safe, and tune your plan alongside the rest of the team.
+  El nefrólogo de trasplante es el especialista en riñones que dirige tu evaluación médica antes de la cirugía. 
+  Revisa las pruebas, confirma que el trasplante sea seguro y ajusta tu plan junto con el resto del equipo.
 </p>
 
-<h2>Main Priorities</h2>
+<h2>Prioridades principales</h2>
 <ul>
-  <li>Review labs, heart/lung testing, and infection screening for surgical readiness.</li>
-  <li>Explain benefits/risks and how your risks will be reduced.</li>
-  <li>Coordinate timing with dialysis (if applicable) and other specialists.</li>
-  <li>Optimize blood pressure, diabetes control, anemia, and bone/mineral balance.</li>
-  <li>Plan vaccinations and medication adjustments before surgery.</li>
+  <li>Revisar análisis de laboratorio, pruebas de corazón/pulmón y estudios de infecciones para confirmar que estás listo para cirugía.</li>
+  <li>Explicar beneficios y riesgos, y cómo se reducirán tus riesgos.</li>
+  <li>Coordinar tiempos con diálisis (si aplica) y otros especialistas.</li>
+  <li>Optimizar la presión arterial, el control de diabetes, la anemia y el equilibrio óseo/mineral.</li>
+  <li>Planificar vacunas y ajustes de medicamentos antes de la cirugía.</li>
 </ul>
 
-<h2>Issues They Work With</h2>
+<h2>Problemas con los que trabajan</h2>
 <ul>
-  <li>Abnormal labs (electrolytes, creatinine trends) and what to repeat or confirm.</li>
-  <li>Heart or lung findings that may need more testing before clearance.</li>
-  <li>Infection risks that must be treated or ruled out prior to surgery.</li>
-  <li>Questions about matching, crossmatch results, and what they mean for you.</li>
+  <li>Análisis anormales (electrolitos, creatinina) y qué repetir o confirmar.</li>
+  <li>Hallazgos cardíacos o pulmonares que pueden requerir más estudios antes de autorizar la cirugía.</li>
+  <li>Riesgos de infección que deben tratarse o descartarse antes de la operación.</li>
+  <li>Preguntas sobre compatibilidad, resultados de pruebas de cruce y lo que significan para ti.</li>
 </ul>
 
-<h2>When to Go to Them</h2>
+<h2>Cuándo acudir a ellos</h2>
 <ul>
-  <li>During the evaluation visits and any time your health changes (ER visit, new infection, hospitalization).</li>
-  <li>If you have new symptoms (fever, chest pain, shortness of breath) or big BP/weight swings.</li>
-  <li>To review what’s still pending for clearance and how close you are to “ready.”</li>
+  <li>Durante las visitas de evaluación y siempre que tu salud cambie (visita a urgencias, nueva infección, hospitalización).</li>
+  <li>Si presentas nuevos síntomas (fiebre, dolor en el pecho, dificultad para respirar) o grandes cambios en presión arterial/peso.</li>
+  <li>Para revisar lo que aún falta por autorizar y qué tan cerca estás de estar “listo”.</li>
 </ul>
 
-<h2>What They Don’t Handle (Boundaries)</h2>
+<h2>Lo que no manejan (límites)</h2>
 <ul>
-  <li>Insurance approvals and cost estimates — handled by the financial coordinator.</li>
-  <li>Scheduling tests and logistics — coordinated by the transplant coordinator.</li>
-  <li>Surgical approach and incision details — explained by the transplant surgeon.</li>
+  <li>Aprobaciones de seguro y estimados de costos — a cargo del coordinador financiero.</li>
+  <li>Programación de pruebas y logística — a cargo del coordinador de trasplante.</li>
+  <li>Enfoque quirúrgico y detalles de la incisión — explicados por el cirujano de trasplante.</li>
 </ul>
-
 
   </main>
   <div data-include="/includes_es/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
 </body>
 </html>
+
