--- a/es/hub/transplant/preop/staff/social-worker.html
+++ b/es/hub/transplant/preop/staff/social-worker.html
@@ -5,7 +5,7 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
   <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);} gtag('js',new Date()); gtag('config','G-JHT0DBJBHH',{transport_type:'beacon'});</script>
   <meta charset="utf-8" /><meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Pre-Op Staff: Social Worker</title>
+  <title>Personal Preoperatorio: Nefrólogo de Trasplante</title>
   <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/assets/css/main.css">
@@ -18,44 +18,43 @@
     <div data-include="/includes_es/transplant-preop-subnav.html"></div>
     <div data-include="/includes_es/transplant-preop-staff-subnav.html"></div>
 
-<h1>Social Worker</h1>
+<h1>Nefrólogo de Trasplante</h1>
 
-<h2>Short Description</h2>
+<h2>Descripción breve</h2>
 <p>
-  The social worker helps you and your caregiver prepare for surgery and the weeks after.
-  They focus on coping, practical planning, and connecting you with resources.
+  El nefrólogo de trasplante es el especialista en riñones que dirige tu evaluación médica antes de la cirugía. 
+  Revisa las pruebas, confirma que el trasplante sea seguro y ajusta tu plan junto con el resto del equipo.
 </p>
 
-<h2>Main Priorities</h2>
+<h2>Prioridades principales</h2>
 <ul>
-  <li>Build a realistic caregiver plan (rides, help at home, backups).</li>
-  <li>Screen for stress, anxiety, depression, and substance use; offer tools and referrals.</li>
-  <li>Guide work/benefits paperwork (FMLA, disability) and clinic documentation needs.</li>
-  <li>Connect you with transportation, lodging, and community support resources.</li>
-  <li>Teach what to expect emotionally before and after surgery.</li>
+  <li>Revisar análisis de laboratorio, pruebas de corazón/pulmón y estudios de infecciones para confirmar que estás listo para cirugía.</li>
+  <li>Explicar beneficios y riesgos, y cómo se reducirán tus riesgos.</li>
+  <li>Coordinar tiempos con diálisis (si aplica) y otros especialistas.</li>
+  <li>Optimizar la presión arterial, el control de diabetes, la anemia y el equilibrio óseo/mineral.</li>
+  <li>Planificar vacunas y ajustes de medicamentos antes de la cirugía.</li>
 </ul>
 
-<h2>Issues They Work With</h2>
+<h2>Problemas con los que trabajan</h2>
 <ul>
-  <li>Caregiver burnout risk, family conflict, or limited support at home.</li>
-  <li>Practical barriers to appointments (childcare, distance, time off).</li>
-  <li>Financial stress that impacts adherence (they coordinate with finance as needed).</li>
-  <li>Grief, fear, or past trauma that may flare around surgery.</li>
+  <li>Análisis anormales (electrolitos, creatinina) y qué repetir o confirmar.</li>
+  <li>Hallazgos cardíacos o pulmonares que pueden requerir más estudios antes de autorizar la cirugía.</li>
+  <li>Riesgos de infección que deben tratarse o descartarse antes de la operación.</li>
+  <li>Preguntas sobre compatibilidad, resultados de pruebas de cruce y lo que significan para ti.</li>
 </ul>
 
-<h2>When to Go to Them</h2>
+<h2>Cuándo acudir a ellos</h2>
 <ul>
-  <li>During evaluation to set up support plans and review resources.</li>
-  <li>When stress or logistics could delay surgery or follow-up.</li>
-  <li>Any time forms, employer letters, or school notes are needed.</li>
-  <li>If you or your caregiver feel overwhelmed and need rapid support.</li>
+  <li>Durante las visitas de evaluación y siempre que tu salud cambie (visita a urgencias, nueva infección, hospitalización).</li>
+  <li>Si presentas nuevos síntomas (fiebre, dolor en el pecho, dificultad para respirar) o grandes cambios en presión arterial/peso.</li>
+  <li>Para revisar lo que aún falta por autorizar y qué tan cerca estás de estar “listo”.</li>
 </ul>
 
-<h2>What They Don’t Handle (Boundaries)</h2>
+<h2>Lo que no manejan (límites)</h2>
 <ul>
-  <li>Medical decisions or medication changes — handled by the clinical team.</li>
-  <li>Insurance authorizations and cost estimates — financial coordinator.</li>
-  <li>Emergency mental health care — use your center’s urgent process or 911.</li>
+  <li>Aprobaciones de seguro y estimados de costos — a cargo del coordinador financiero.</li>
+  <li>Programación de pruebas y logística — a cargo del coordinador de trasplante.</li>
+  <li>Enfoque quirúrgico y detalles de la incisión — explicados por el cirujano de trasplante.</li>
 </ul>
 
   </main>
@@ -63,3 +62,4 @@
   <script src="/scripts/analytics.js" defer></script>
 </body>
 </html>
+
