--- a/es/hub/transplant/preop/staff/surgeon.html
+++ b/es/hub/transplant/preop/staff/surgeon.html
@@ -5,7 +5,7 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
   <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);} gtag('js',new Date()); gtag('config','G-JHT0DBJBHH',{transport_type:'beacon'});</script>
   <meta charset="utf-8" /><meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Pre-Op Staff: Transplant Surgeon (Consult)</title>
+  <title>Personal Preoperatorio: Cirujano de Trasplante (Consulta)</title>
   <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/assets/css/main.css">
@@ -18,45 +18,45 @@
     <div data-include="/includes_es/transplant-preop-subnav.html"></div>
     <div data-include="/includes_es/transplant-preop-staff-subnav.html"></div>
 
-<h1>Transplant Surgeon (Consult)</h1>
+<h1>Cirujano de Trasplante (Consulta)</h1>
 
-<h2>Short Description</h2>
+<h2>Descripción breve</h2>
 <p>
-  The transplant surgeon explains how your operation will be done, reviews your imaging,
-  discusses risks that apply to you, and answers technical questions about the procedure
-  and the first days after surgery.
+  El cirujano de trasplante explica cómo se realizará tu operación, revisa tus imágenes,
+  comenta los riesgos que se aplican a tu caso y responde preguntas técnicas sobre el procedimiento
+  y los primeros días después de la cirugía.
 </p>
 
-<h2>Main Priorities</h2>
+<h2>Prioridades principales</h2>
 <ul>
-  <li>Review imaging and anatomy to plan the operation (incision, vessel layout, prior scars).</li>
-  <li>Explain the surgical steps, expected length of surgery, and immediate recovery plan.</li>
-  <li>Discuss devices and drains (ureteral stent, catheter, surgical drain) and removal timing.</li>
-  <li>Set expectations for pain control, early walking, diet progression, and lab checks.</li>
-  <li>Outline procedure-specific risks and how the team lowers those risks.</li>
+  <li>Revisar imágenes y anatomía para planificar la operación (incisión, disposición de vasos, cicatrices previas).</li>
+  <li>Explicar los pasos quirúrgicos, la duración esperada de la cirugía y el plan inmediato de recuperación.</li>
+  <li>Hablar sobre dispositivos y drenajes (stent ureteral, catéter, drenaje quirúrgico) y el momento de retirarlos.</li>
+  <li>Establecer expectativas para el control del dolor, la movilización temprana, la progresión de la dieta y los análisis de laboratorio.</li>
+  <li>Describir riesgos específicos del procedimiento y cómo el equipo trabaja para reducirlos.</li>
 </ul>
 
-<h2>Issues They Work With</h2>
+<h2>Problemas con los que trabajan</h2>
 <ul>
-  <li>Complex anatomy or prior abdominal surgeries that affect the approach.</li>
-  <li>Blood vessel quality and placement of the kidney for best function.</li>
-  <li>Plans for handling scar tissue, hernias, or dialysis access present at surgery.</li>
-  <li>Decision-making about stents, drains, and wound care needs after discharge.</li>
+  <li>Anatomía compleja o cirugías abdominales previas que afectan el abordaje.</li>
+  <li>Calidad de los vasos sanguíneos y ubicación del riñón para mejor función.</li>
+  <li>Planes para manejar tejido cicatricial, hernias o accesos de diálisis presentes durante la cirugía.</li>
+  <li>Toma de decisiones sobre stents, drenajes y cuidados de la herida tras el alta.</li>
 </ul>
 
-<h2>When to Go to Them</h2>
+<h2>Cuándo acudir a ellos</h2>
 <ul>
-  <li>During the pre-op surgical consult and if your health changes before surgery (infection, hospitalization, new diagnosis).</li>
-  <li>When you need clarity on incision location/size, pain plan, or limits on lifting, driving, and activity.</li>
-  <li>Bring a list of past surgeries, allergies, blood thinners or antiplatelet meds, and mobility limits.</li>
+  <li>Durante la consulta quirúrgica preoperatoria y si tu salud cambia antes de la cirugía (infección, hospitalización, nuevo diagnóstico).</li>
+  <li>Cuando necesites claridad sobre la ubicación/tamaño de la incisión, el plan de control del dolor o las restricciones para levantar peso, conducir y realizar actividades.</li>
+  <li>Llevar una lista de cirugías previas, alergias, anticoagulantes o antiagregantes, y limitaciones de movilidad.</li>
 </ul>
 
-<h2>What They Don’t Handle (Boundaries)</h2>
+<h2>Lo que no manejan (límites)</h2>
 <ul>
-  <li>Long-term medication plan and dose adjustments — transplant nephrologist/pharmacist.</li>
-  <li>Scheduling, instructions logistics, and test bundling — transplant coordinator.</li>
-  <li>Insurance approvals and cost estimates — financial coordinator.</li>
-  <li>Counseling, caregiver support, work/benefits paperwork — social worker.</li>
+  <li>Plan de medicación a largo plazo y ajustes de dosis — nefrólogo de trasplante/farmacéutico.</li>
+  <li>Programación, instrucciones logísticas y agrupación de pruebas — coordinador de trasplante.</li>
+  <li>Aprobaciones de seguro y estimaciones de costos — coordinador financiero.</li>
+  <li>Consejería, apoyo al cuidador y trámites laborales/beneficios — trabajador social.</li>
 </ul>
 
   </main>
@@ -64,3 +64,4 @@
   <script src="/scripts/analytics.js" defer></script>
 </body>
 </html>
+
